Updared load queue + added proper lib export

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "load-image-queue",
   "version": "1.0.0",
   "description": "Loading image with queue support to allow loading images as you need. Ideal for virtual list (with cancel support).",
-  "main": "dist/load-image-queue.js",
+  "main": "lib/index.js",
   "repository": "https://github.com/pionl/load-image-queue",
   "files": [
-    "dist"
+    "dist",
+    "lib"
   ],
   "jest": {
     "collectCoverage": false,
@@ -23,7 +24,8 @@
     "build-pre": "rimraf dist",
     "build-dev": "NODE_ENV=development webpack --progress --colors",
     "build-prod": "BABEL_ENV=production NODE_ENV=production webpack -p",
-    "build": "npm run build-pre && npm run build-dev && npm run build-prod",
+    "build-lib": "babel --out-dir lib src",
+    "build": "npm run build-pre && npm run build-dev && npm run build-prod && npm run build-lib",
     "watch": "webpack --progress --colors --watch",
     "lint": "node_modules/.bin/eslint ./src/. --ext .js",
     "lint-fix": "node_modules/.bin/eslint --fix ./src/. --ext .js",
@@ -34,6 +36,7 @@
   "author": "Martin Kluska <martin@kluska.cz>",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
@@ -52,7 +55,7 @@
     "webpack": "^2.4.1"
   },
   "dependencies": {
-    "load-queue": "^1.0.5"
+    "load-queue": "^1.0.6"
   },
   "keywords": [
     "javascript",
